syntax = "proto3";

option csharp_namespace = "Web.BFF.Protos";

import "google/protobuf/timestamp.proto";

package reviews;

service GrpcReviews {
    rpc CreateReview (CreateReviewRequest) returns (CreateReviewReply);

    rpc GetReviewsByProductId (GetReviewsByProductIdRequest) returns (GetReviewsByProductidReply);
}

message CreateReviewRequest {
    int32 product_id = 1;
    int32 user_id = 2;
    int32 rating = 3;
    string text = 4;
}

message CreateReviewReply {
    int32 review_id = 1;
}

message GetReviewsByProductIdRequest {
    int32 product_id = 1;
}

message GetReviewsByProductidReply {
    repeated ReviewReply reviews = 1;
}

message ReviewReply {
    int32 id = 1;
    int32 product_id = 2;
    int32 user_id = 3;
    string user_display_name = 4;
    int32 rating = 5;
    string text = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp modified_at = 8;
}